src/main/parser.output
Rules useless in parser due to conflicts

   10 screens_inner: %empty


State 22 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce


Grammar

    0 $accept: query $end

    1 query: '<' TK_MOBILANG '>' screens persistence properties '<' '/' TK_MOBILANG '>'
    2      | '<' TK_MOBILANG '>' screens properties persistence '<' '/' TK_MOBILANG '>'
    3      | '<' TK_MOBILANG '>' properties screens persistence '<' '/' TK_MOBILANG '>'
    4      | '<' TK_MOBILANG '>' properties persistence screens '<' '/' TK_MOBILANG '>'
    5      | '<' TK_MOBILANG '>' persistence properties screens '<' '/' TK_MOBILANG '>'
    6      | '<' TK_MOBILANG '>' persistence screens properties '<' '/' TK_MOBILANG '>'
    7      | %empty

    8 screens: '<' TK_SCREENS '>' screens_inner '<' '/' TK_SCREENS '>'

    9 screens_inner: screen screens_inner
   10              | %empty

   11 screen: screen_open_tag structure style behavior screen_close_tag
   12       | screen_open_tag structure behavior style screen_close_tag
   13       | screen_open_tag style structure behavior screen_close_tag
   14       | screen_open_tag style behavior structure screen_close_tag
   15       | screen_open_tag behavior structure style screen_close_tag
   16       | screen_open_tag behavior style structure screen_close_tag

   17 screen_open_tag: '<' TK_SCREEN tag_properties '>'

   18 screen_close_tag: '<' '/' TK_SCREEN '>'

   19 tag_properties: TK_TAG_PROPERTY tag_multiple_properties
   20               | %empty

   21 tag_multiple_properties: ' ' tag_properties
   22                        | %empty

   23 structure: '<' TK_STRUCTURE '>' content '<' '/' TK_STRUCTURE '>'

   24 content: TK_TEXT content
   25        | %empty

   26 style: '<' TK_STYLE '>' content '<' '/' TK_STYLE '>'

   27 behavior: '<' TK_BEHAVIOR '>' content '<' '/' TK_BEHAVIOR '>'

   28 properties: '<' TK_PROPERTIES '>' content '<' '/' TK_PROPERTIES '>'

   29 persistence: '<' TK_PERSISTENCE '>' content '<' '/' TK_PERSISTENCE '>'


Terminals, with rules where they appear

    $end (0) 0
    ' ' (32) 21
    '/' (47) 1 2 3 4 5 6 8 18 23 26 27 28 29
    '<' (60) 1 2 3 4 5 6 8 17 18 23 26 27 28 29
    '>' (62) 1 2 3 4 5 6 8 17 18 23 26 27 28 29
    error (256)
    TK_MOBILANG (258) 1 2 3 4 5 6
    TK_SCREENS (259) 8
    TK_SCREEN (260) 17 18
    TK_STRUCTURE (261) 23
    TK_STYLE (262) 26
    TK_BEHAVIOR (263) 27
    TK_PROPERTIES (264) 28
    TK_PERSISTENCE (265) 29
    TK_TAG_PROPERTY (266) 19
    TK_TEXT (267) 24


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    query (18)
        on left: 1 2 3 4 5 6 7
        on right: 0
    screens <node> (19)
        on left: 8
        on right: 1 2 3 4 5 6
    screens_inner <node> (20)
        on left: 9 10
        on right: 8 9
    screen <node> (21)
        on left: 11 12 13 14 15 16
        on right: 9
    screen_open_tag <node> (22)
        on left: 17
        on right: 11 12 13 14 15 16
    screen_close_tag (23)
        on left: 18
        on right: 11 12 13 14 15 16
    tag_properties <str> (24)
        on left: 19 20
        on right: 17 21
    tag_multiple_properties <str> (25)
        on left: 21 22
        on right: 19
    structure <node> (26)
        on left: 23
        on right: 11 12 13 14 15 16
    content <node> (27)
        on left: 24 25
        on right: 23 24 26 27 28 29
    style <node> (28)
        on left: 26
        on right: 11 12 13 14 15 16
    behavior <node> (29)
        on left: 27
        on right: 11 12 13 14 15 16
    properties <node> (30)
        on left: 28
        on right: 1 2 3 4 5 6
    persistence <node> (31)
        on left: 29
        on right: 1 2 3 4 5 6


State 0

    0 $accept: . query $end

    '<'  shift, and go to state 1

    $default  reduce using rule 7 (query)

    query  go to state 2


State 1

    1 query: '<' . TK_MOBILANG '>' screens persistence properties '<' '/' TK_MOBILANG '>'
    2      | '<' . TK_MOBILANG '>' screens properties persistence '<' '/' TK_MOBILANG '>'
    3      | '<' . TK_MOBILANG '>' properties screens persistence '<' '/' TK_MOBILANG '>'
    4      | '<' . TK_MOBILANG '>' properties persistence screens '<' '/' TK_MOBILANG '>'
    5      | '<' . TK_MOBILANG '>' persistence properties screens '<' '/' TK_MOBILANG '>'
    6      | '<' . TK_MOBILANG '>' persistence screens properties '<' '/' TK_MOBILANG '>'

    TK_MOBILANG  shift, and go to state 3


State 2

    0 $accept: query . $end

    $end  shift, and go to state 4


State 3

    1 query: '<' TK_MOBILANG . '>' screens persistence properties '<' '/' TK_MOBILANG '>'
    2      | '<' TK_MOBILANG . '>' screens properties persistence '<' '/' TK_MOBILANG '>'
    3      | '<' TK_MOBILANG . '>' properties screens persistence '<' '/' TK_MOBILANG '>'
    4      | '<' TK_MOBILANG . '>' properties persistence screens '<' '/' TK_MOBILANG '>'
    5      | '<' TK_MOBILANG . '>' persistence properties screens '<' '/' TK_MOBILANG '>'
    6      | '<' TK_MOBILANG . '>' persistence screens properties '<' '/' TK_MOBILANG '>'

    '>'  shift, and go to state 5


State 4

    0 $accept: query $end .

    $default  accept


State 5

    1 query: '<' TK_MOBILANG '>' . screens persistence properties '<' '/' TK_MOBILANG '>'
    2      | '<' TK_MOBILANG '>' . screens properties persistence '<' '/' TK_MOBILANG '>'
    3      | '<' TK_MOBILANG '>' . properties screens persistence '<' '/' TK_MOBILANG '>'
    4      | '<' TK_MOBILANG '>' . properties persistence screens '<' '/' TK_MOBILANG '>'
    5      | '<' TK_MOBILANG '>' . persistence properties screens '<' '/' TK_MOBILANG '>'
    6      | '<' TK_MOBILANG '>' . persistence screens properties '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 6

    screens      go to state 7
    properties   go to state 8
    persistence  go to state 9


State 6

    8 screens: '<' . TK_SCREENS '>' screens_inner '<' '/' TK_SCREENS '>'
   28 properties: '<' . TK_PROPERTIES '>' content '<' '/' TK_PROPERTIES '>'
   29 persistence: '<' . TK_PERSISTENCE '>' content '<' '/' TK_PERSISTENCE '>'

    TK_SCREENS      shift, and go to state 10
    TK_PROPERTIES   shift, and go to state 11
    TK_PERSISTENCE  shift, and go to state 12


State 7

    1 query: '<' TK_MOBILANG '>' screens . persistence properties '<' '/' TK_MOBILANG '>'
    2      | '<' TK_MOBILANG '>' screens . properties persistence '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 13

    properties   go to state 14
    persistence  go to state 15


State 8

    3 query: '<' TK_MOBILANG '>' properties . screens persistence '<' '/' TK_MOBILANG '>'
    4      | '<' TK_MOBILANG '>' properties . persistence screens '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 16

    screens      go to state 17
    persistence  go to state 18


State 9

    5 query: '<' TK_MOBILANG '>' persistence . properties screens '<' '/' TK_MOBILANG '>'
    6      | '<' TK_MOBILANG '>' persistence . screens properties '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 19

    screens     go to state 20
    properties  go to state 21


State 10

    8 screens: '<' TK_SCREENS . '>' screens_inner '<' '/' TK_SCREENS '>'

    '>'  shift, and go to state 22


State 11

   28 properties: '<' TK_PROPERTIES . '>' content '<' '/' TK_PROPERTIES '>'

    '>'  shift, and go to state 23


State 12

   29 persistence: '<' TK_PERSISTENCE . '>' content '<' '/' TK_PERSISTENCE '>'

    '>'  shift, and go to state 24


State 13

   28 properties: '<' . TK_PROPERTIES '>' content '<' '/' TK_PROPERTIES '>'
   29 persistence: '<' . TK_PERSISTENCE '>' content '<' '/' TK_PERSISTENCE '>'

    TK_PROPERTIES   shift, and go to state 11
    TK_PERSISTENCE  shift, and go to state 12


State 14

    2 query: '<' TK_MOBILANG '>' screens properties . persistence '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 25

    persistence  go to state 26


State 15

    1 query: '<' TK_MOBILANG '>' screens persistence . properties '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 27

    properties  go to state 28


State 16

    8 screens: '<' . TK_SCREENS '>' screens_inner '<' '/' TK_SCREENS '>'
   29 persistence: '<' . TK_PERSISTENCE '>' content '<' '/' TK_PERSISTENCE '>'

    TK_SCREENS      shift, and go to state 10
    TK_PERSISTENCE  shift, and go to state 12


State 17

    3 query: '<' TK_MOBILANG '>' properties screens . persistence '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 25

    persistence  go to state 29


State 18

    4 query: '<' TK_MOBILANG '>' properties persistence . screens '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 30

    screens  go to state 31


State 19

    8 screens: '<' . TK_SCREENS '>' screens_inner '<' '/' TK_SCREENS '>'
   28 properties: '<' . TK_PROPERTIES '>' content '<' '/' TK_PROPERTIES '>'

    TK_SCREENS     shift, and go to state 10
    TK_PROPERTIES  shift, and go to state 11


State 20

    6 query: '<' TK_MOBILANG '>' persistence screens . properties '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 27

    properties  go to state 32


State 21

    5 query: '<' TK_MOBILANG '>' persistence properties . screens '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 30

    screens  go to state 33


State 22

    8 screens: '<' TK_SCREENS '>' . screens_inner '<' '/' TK_SCREENS '>'

    '<'  shift, and go to state 34

    '<'  [reduce using rule 10 (screens_inner)]

    screens_inner    go to state 35
    screen           go to state 36
    screen_open_tag  go to state 37


State 23

   28 properties: '<' TK_PROPERTIES '>' . content '<' '/' TK_PROPERTIES '>'

    TK_TEXT  shift, and go to state 38

    $default  reduce using rule 25 (content)

    content  go to state 39


State 24

   29 persistence: '<' TK_PERSISTENCE '>' . content '<' '/' TK_PERSISTENCE '>'

    TK_TEXT  shift, and go to state 38

    $default  reduce using rule 25 (content)

    content  go to state 40


State 25

   29 persistence: '<' . TK_PERSISTENCE '>' content '<' '/' TK_PERSISTENCE '>'

    TK_PERSISTENCE  shift, and go to state 12


State 26

    2 query: '<' TK_MOBILANG '>' screens properties persistence . '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 41


State 27

   28 properties: '<' . TK_PROPERTIES '>' content '<' '/' TK_PROPERTIES '>'

    TK_PROPERTIES  shift, and go to state 11


State 28

    1 query: '<' TK_MOBILANG '>' screens persistence properties . '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 42


State 29

    3 query: '<' TK_MOBILANG '>' properties screens persistence . '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 43


State 30

    8 screens: '<' . TK_SCREENS '>' screens_inner '<' '/' TK_SCREENS '>'

    TK_SCREENS  shift, and go to state 10


State 31

    4 query: '<' TK_MOBILANG '>' properties persistence screens . '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 44


State 32

    6 query: '<' TK_MOBILANG '>' persistence screens properties . '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 45


State 33

    5 query: '<' TK_MOBILANG '>' persistence properties screens . '<' '/' TK_MOBILANG '>'

    '<'  shift, and go to state 46


State 34

   17 screen_open_tag: '<' . TK_SCREEN tag_properties '>'

    TK_SCREEN  shift, and go to state 47


State 35

    8 screens: '<' TK_SCREENS '>' screens_inner . '<' '/' TK_SCREENS '>'

    '<'  shift, and go to state 48


State 36

    9 screens_inner: screen . screens_inner

    '<'  shift, and go to state 34

    '<'  [reduce using rule 10 (screens_inner)]

    screens_inner    go to state 49
    screen           go to state 36
    screen_open_tag  go to state 37


State 37

   11 screen: screen_open_tag . structure style behavior screen_close_tag
   12       | screen_open_tag . structure behavior style screen_close_tag
   13       | screen_open_tag . style structure behavior screen_close_tag
   14       | screen_open_tag . style behavior structure screen_close_tag
   15       | screen_open_tag . behavior structure style screen_close_tag
   16       | screen_open_tag . behavior style structure screen_close_tag

    '<'  shift, and go to state 50

    structure  go to state 51
    style      go to state 52
    behavior   go to state 53


State 38

   24 content: TK_TEXT . content

    TK_TEXT  shift, and go to state 38

    $default  reduce using rule 25 (content)

    content  go to state 54


State 39

   28 properties: '<' TK_PROPERTIES '>' content . '<' '/' TK_PROPERTIES '>'

    '<'  shift, and go to state 55


State 40

   29 persistence: '<' TK_PERSISTENCE '>' content . '<' '/' TK_PERSISTENCE '>'

    '<'  shift, and go to state 56


State 41

    2 query: '<' TK_MOBILANG '>' screens properties persistence '<' . '/' TK_MOBILANG '>'

    '/'  shift, and go to state 57


State 42

    1 query: '<' TK_MOBILANG '>' screens persistence properties '<' . '/' TK_MOBILANG '>'

    '/'  shift, and go to state 58


State 43

    3 query: '<' TK_MOBILANG '>' properties screens persistence '<' . '/' TK_MOBILANG '>'

    '/'  shift, and go to state 59


State 44

    4 query: '<' TK_MOBILANG '>' properties persistence screens '<' . '/' TK_MOBILANG '>'

    '/'  shift, and go to state 60


State 45

    6 query: '<' TK_MOBILANG '>' persistence screens properties '<' . '/' TK_MOBILANG '>'

    '/'  shift, and go to state 61


State 46

    5 query: '<' TK_MOBILANG '>' persistence properties screens '<' . '/' TK_MOBILANG '>'

    '/'  shift, and go to state 62


State 47

   17 screen_open_tag: '<' TK_SCREEN . tag_properties '>'

    TK_TAG_PROPERTY  shift, and go to state 63

    $default  reduce using rule 20 (tag_properties)

    tag_properties  go to state 64


State 48

    8 screens: '<' TK_SCREENS '>' screens_inner '<' . '/' TK_SCREENS '>'

    '/'  shift, and go to state 65


State 49

    9 screens_inner: screen screens_inner .

    $default  reduce using rule 9 (screens_inner)


State 50

   23 structure: '<' . TK_STRUCTURE '>' content '<' '/' TK_STRUCTURE '>'
   26 style: '<' . TK_STYLE '>' content '<' '/' TK_STYLE '>'
   27 behavior: '<' . TK_BEHAVIOR '>' content '<' '/' TK_BEHAVIOR '>'

    TK_STRUCTURE  shift, and go to state 66
    TK_STYLE      shift, and go to state 67
    TK_BEHAVIOR   shift, and go to state 68


State 51

   11 screen: screen_open_tag structure . style behavior screen_close_tag
   12       | screen_open_tag structure . behavior style screen_close_tag

    '<'  shift, and go to state 69

    style     go to state 70
    behavior  go to state 71


State 52

   13 screen: screen_open_tag style . structure behavior screen_close_tag
   14       | screen_open_tag style . behavior structure screen_close_tag

    '<'  shift, and go to state 72

    structure  go to state 73
    behavior   go to state 74


State 53

   15 screen: screen_open_tag behavior . structure style screen_close_tag
   16       | screen_open_tag behavior . style structure screen_close_tag

    '<'  shift, and go to state 75

    structure  go to state 76
    style      go to state 77


State 54

   24 content: TK_TEXT content .

    $default  reduce using rule 24 (content)


State 55

   28 properties: '<' TK_PROPERTIES '>' content '<' . '/' TK_PROPERTIES '>'

    '/'  shift, and go to state 78


State 56

   29 persistence: '<' TK_PERSISTENCE '>' content '<' . '/' TK_PERSISTENCE '>'

    '/'  shift, and go to state 79


State 57

    2 query: '<' TK_MOBILANG '>' screens properties persistence '<' '/' . TK_MOBILANG '>'

    TK_MOBILANG  shift, and go to state 80


State 58

    1 query: '<' TK_MOBILANG '>' screens persistence properties '<' '/' . TK_MOBILANG '>'

    TK_MOBILANG  shift, and go to state 81


State 59

    3 query: '<' TK_MOBILANG '>' properties screens persistence '<' '/' . TK_MOBILANG '>'

    TK_MOBILANG  shift, and go to state 82


State 60

    4 query: '<' TK_MOBILANG '>' properties persistence screens '<' '/' . TK_MOBILANG '>'

    TK_MOBILANG  shift, and go to state 83


State 61

    6 query: '<' TK_MOBILANG '>' persistence screens properties '<' '/' . TK_MOBILANG '>'

    TK_MOBILANG  shift, and go to state 84


State 62

    5 query: '<' TK_MOBILANG '>' persistence properties screens '<' '/' . TK_MOBILANG '>'

    TK_MOBILANG  shift, and go to state 85


State 63

   19 tag_properties: TK_TAG_PROPERTY . tag_multiple_properties

    ' '  shift, and go to state 86

    $default  reduce using rule 22 (tag_multiple_properties)

    tag_multiple_properties  go to state 87


State 64

   17 screen_open_tag: '<' TK_SCREEN tag_properties . '>'

    '>'  shift, and go to state 88


State 65

    8 screens: '<' TK_SCREENS '>' screens_inner '<' '/' . TK_SCREENS '>'

    TK_SCREENS  shift, and go to state 89


State 66

   23 structure: '<' TK_STRUCTURE . '>' content '<' '/' TK_STRUCTURE '>'

    '>'  shift, and go to state 90


State 67

   26 style: '<' TK_STYLE . '>' content '<' '/' TK_STYLE '>'

    '>'  shift, and go to state 91


State 68

   27 behavior: '<' TK_BEHAVIOR . '>' content '<' '/' TK_BEHAVIOR '>'

    '>'  shift, and go to state 92


State 69

   26 style: '<' . TK_STYLE '>' content '<' '/' TK_STYLE '>'
   27 behavior: '<' . TK_BEHAVIOR '>' content '<' '/' TK_BEHAVIOR '>'

    TK_STYLE     shift, and go to state 67
    TK_BEHAVIOR  shift, and go to state 68


State 70

   11 screen: screen_open_tag structure style . behavior screen_close_tag

    '<'  shift, and go to state 93

    behavior  go to state 94


State 71

   12 screen: screen_open_tag structure behavior . style screen_close_tag

    '<'  shift, and go to state 95

    style  go to state 96


State 72

   23 structure: '<' . TK_STRUCTURE '>' content '<' '/' TK_STRUCTURE '>'
   27 behavior: '<' . TK_BEHAVIOR '>' content '<' '/' TK_BEHAVIOR '>'

    TK_STRUCTURE  shift, and go to state 66
    TK_BEHAVIOR   shift, and go to state 68


State 73

   13 screen: screen_open_tag style structure . behavior screen_close_tag

    '<'  shift, and go to state 93

    behavior  go to state 97


State 74

   14 screen: screen_open_tag style behavior . structure screen_close_tag

    '<'  shift, and go to state 98

    structure  go to state 99


State 75

   23 structure: '<' . TK_STRUCTURE '>' content '<' '/' TK_STRUCTURE '>'
   26 style: '<' . TK_STYLE '>' content '<' '/' TK_STYLE '>'

    TK_STRUCTURE  shift, and go to state 66
    TK_STYLE      shift, and go to state 67


State 76

   15 screen: screen_open_tag behavior structure . style screen_close_tag

    '<'  shift, and go to state 95

    style  go to state 100


State 77

   16 screen: screen_open_tag behavior style . structure screen_close_tag

    '<'  shift, and go to state 98

    structure  go to state 101


State 78

   28 properties: '<' TK_PROPERTIES '>' content '<' '/' . TK_PROPERTIES '>'

    TK_PROPERTIES  shift, and go to state 102


State 79

   29 persistence: '<' TK_PERSISTENCE '>' content '<' '/' . TK_PERSISTENCE '>'

    TK_PERSISTENCE  shift, and go to state 103


State 80

    2 query: '<' TK_MOBILANG '>' screens properties persistence '<' '/' TK_MOBILANG . '>'

    '>'  shift, and go to state 104


State 81

    1 query: '<' TK_MOBILANG '>' screens persistence properties '<' '/' TK_MOBILANG . '>'

    '>'  shift, and go to state 105


State 82

    3 query: '<' TK_MOBILANG '>' properties screens persistence '<' '/' TK_MOBILANG . '>'

    '>'  shift, and go to state 106


State 83

    4 query: '<' TK_MOBILANG '>' properties persistence screens '<' '/' TK_MOBILANG . '>'

    '>'  shift, and go to state 107


State 84

    6 query: '<' TK_MOBILANG '>' persistence screens properties '<' '/' TK_MOBILANG . '>'

    '>'  shift, and go to state 108


State 85

    5 query: '<' TK_MOBILANG '>' persistence properties screens '<' '/' TK_MOBILANG . '>'

    '>'  shift, and go to state 109


State 86

   21 tag_multiple_properties: ' ' . tag_properties

    TK_TAG_PROPERTY  shift, and go to state 63

    $default  reduce using rule 20 (tag_properties)

    tag_properties  go to state 110


State 87

   19 tag_properties: TK_TAG_PROPERTY tag_multiple_properties .

    $default  reduce using rule 19 (tag_properties)


State 88

   17 screen_open_tag: '<' TK_SCREEN tag_properties '>' .

    $default  reduce using rule 17 (screen_open_tag)


State 89

    8 screens: '<' TK_SCREENS '>' screens_inner '<' '/' TK_SCREENS . '>'

    '>'  shift, and go to state 111


State 90

   23 structure: '<' TK_STRUCTURE '>' . content '<' '/' TK_STRUCTURE '>'

    TK_TEXT  shift, and go to state 38

    $default  reduce using rule 25 (content)

    content  go to state 112


State 91

   26 style: '<' TK_STYLE '>' . content '<' '/' TK_STYLE '>'

    TK_TEXT  shift, and go to state 38

    $default  reduce using rule 25 (content)

    content  go to state 113


State 92

   27 behavior: '<' TK_BEHAVIOR '>' . content '<' '/' TK_BEHAVIOR '>'

    TK_TEXT  shift, and go to state 38

    $default  reduce using rule 25 (content)

    content  go to state 114


State 93

   27 behavior: '<' . TK_BEHAVIOR '>' content '<' '/' TK_BEHAVIOR '>'

    TK_BEHAVIOR  shift, and go to state 68


State 94

   11 screen: screen_open_tag structure style behavior . screen_close_tag

    '<'  shift, and go to state 115

    screen_close_tag  go to state 116


State 95

   26 style: '<' . TK_STYLE '>' content '<' '/' TK_STYLE '>'

    TK_STYLE  shift, and go to state 67


State 96

   12 screen: screen_open_tag structure behavior style . screen_close_tag

    '<'  shift, and go to state 115

    screen_close_tag  go to state 117


State 97

   13 screen: screen_open_tag style structure behavior . screen_close_tag

    '<'  shift, and go to state 115

    screen_close_tag  go to state 118


State 98

   23 structure: '<' . TK_STRUCTURE '>' content '<' '/' TK_STRUCTURE '>'

    TK_STRUCTURE  shift, and go to state 66


State 99

   14 screen: screen_open_tag style behavior structure . screen_close_tag

    '<'  shift, and go to state 115

    screen_close_tag  go to state 119


State 100

   15 screen: screen_open_tag behavior structure style . screen_close_tag

    '<'  shift, and go to state 115

    screen_close_tag  go to state 120


State 101

   16 screen: screen_open_tag behavior style structure . screen_close_tag

    '<'  shift, and go to state 115

    screen_close_tag  go to state 121


State 102

   28 properties: '<' TK_PROPERTIES '>' content '<' '/' TK_PROPERTIES . '>'

    '>'  shift, and go to state 122


State 103

   29 persistence: '<' TK_PERSISTENCE '>' content '<' '/' TK_PERSISTENCE . '>'

    '>'  shift, and go to state 123


State 104

    2 query: '<' TK_MOBILANG '>' screens properties persistence '<' '/' TK_MOBILANG '>' .

    $default  reduce using rule 2 (query)


State 105

    1 query: '<' TK_MOBILANG '>' screens persistence properties '<' '/' TK_MOBILANG '>' .

    $default  reduce using rule 1 (query)


State 106

    3 query: '<' TK_MOBILANG '>' properties screens persistence '<' '/' TK_MOBILANG '>' .

    $default  reduce using rule 3 (query)


State 107

    4 query: '<' TK_MOBILANG '>' properties persistence screens '<' '/' TK_MOBILANG '>' .

    $default  reduce using rule 4 (query)


State 108

    6 query: '<' TK_MOBILANG '>' persistence screens properties '<' '/' TK_MOBILANG '>' .

    $default  reduce using rule 6 (query)


State 109

    5 query: '<' TK_MOBILANG '>' persistence properties screens '<' '/' TK_MOBILANG '>' .

    $default  reduce using rule 5 (query)


State 110

   21 tag_multiple_properties: ' ' tag_properties .

    $default  reduce using rule 21 (tag_multiple_properties)


State 111

    8 screens: '<' TK_SCREENS '>' screens_inner '<' '/' TK_SCREENS '>' .

    $default  reduce using rule 8 (screens)


State 112

   23 structure: '<' TK_STRUCTURE '>' content . '<' '/' TK_STRUCTURE '>'

    '<'  shift, and go to state 124


State 113

   26 style: '<' TK_STYLE '>' content . '<' '/' TK_STYLE '>'

    '<'  shift, and go to state 125


State 114

   27 behavior: '<' TK_BEHAVIOR '>' content . '<' '/' TK_BEHAVIOR '>'

    '<'  shift, and go to state 126


State 115

   18 screen_close_tag: '<' . '/' TK_SCREEN '>'

    '/'  shift, and go to state 127


State 116

   11 screen: screen_open_tag structure style behavior screen_close_tag .

    $default  reduce using rule 11 (screen)


State 117

   12 screen: screen_open_tag structure behavior style screen_close_tag .

    $default  reduce using rule 12 (screen)


State 118

   13 screen: screen_open_tag style structure behavior screen_close_tag .

    $default  reduce using rule 13 (screen)


State 119

   14 screen: screen_open_tag style behavior structure screen_close_tag .

    $default  reduce using rule 14 (screen)


State 120

   15 screen: screen_open_tag behavior structure style screen_close_tag .

    $default  reduce using rule 15 (screen)


State 121

   16 screen: screen_open_tag behavior style structure screen_close_tag .

    $default  reduce using rule 16 (screen)


State 122

   28 properties: '<' TK_PROPERTIES '>' content '<' '/' TK_PROPERTIES '>' .

    $default  reduce using rule 28 (properties)


State 123

   29 persistence: '<' TK_PERSISTENCE '>' content '<' '/' TK_PERSISTENCE '>' .

    $default  reduce using rule 29 (persistence)


State 124

   23 structure: '<' TK_STRUCTURE '>' content '<' . '/' TK_STRUCTURE '>'

    '/'  shift, and go to state 128


State 125

   26 style: '<' TK_STYLE '>' content '<' . '/' TK_STYLE '>'

    '/'  shift, and go to state 129


State 126

   27 behavior: '<' TK_BEHAVIOR '>' content '<' . '/' TK_BEHAVIOR '>'

    '/'  shift, and go to state 130


State 127

   18 screen_close_tag: '<' '/' . TK_SCREEN '>'

    TK_SCREEN  shift, and go to state 131


State 128

   23 structure: '<' TK_STRUCTURE '>' content '<' '/' . TK_STRUCTURE '>'

    TK_STRUCTURE  shift, and go to state 132


State 129

   26 style: '<' TK_STYLE '>' content '<' '/' . TK_STYLE '>'

    TK_STYLE  shift, and go to state 133


State 130

   27 behavior: '<' TK_BEHAVIOR '>' content '<' '/' . TK_BEHAVIOR '>'

    TK_BEHAVIOR  shift, and go to state 134


State 131

   18 screen_close_tag: '<' '/' TK_SCREEN . '>'

    '>'  shift, and go to state 135


State 132

   23 structure: '<' TK_STRUCTURE '>' content '<' '/' TK_STRUCTURE . '>'

    '>'  shift, and go to state 136


State 133

   26 style: '<' TK_STYLE '>' content '<' '/' TK_STYLE . '>'

    '>'  shift, and go to state 137


State 134

   27 behavior: '<' TK_BEHAVIOR '>' content '<' '/' TK_BEHAVIOR . '>'

    '>'  shift, and go to state 138


State 135

   18 screen_close_tag: '<' '/' TK_SCREEN '>' .

    $default  reduce using rule 18 (screen_close_tag)


State 136

   23 structure: '<' TK_STRUCTURE '>' content '<' '/' TK_STRUCTURE '>' .

    $default  reduce using rule 23 (structure)


State 137

   26 style: '<' TK_STYLE '>' content '<' '/' TK_STYLE '>' .

    $default  reduce using rule 26 (style)


State 138

   27 behavior: '<' TK_BEHAVIOR '>' content '<' '/' TK_BEHAVIOR '>' .

    $default  reduce using rule 27 (behavior)
